...
            "state" : "translated",
            "value" : "Maceraya Devam Et"
          }
        }
      }
    },
    "Continue as Guest" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Als Gast fortfahren"
          }
...
            "state" : "translated",
            "value" : "Sözlük"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fertig"
          }
...
            "state" : "translated",
            "value" : "Sonraki Bölüm"
          }
        }
      }
    },
    "Next Question" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nächste Frage"
          }
...
            "state" : "translated",
            "value" : "Test Tamamlandı!"
          }
        }
      }
    },
    "Quiz, Dictionary & Awards" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Quiz, Wörterbuch & Auszeichnungen"
          }
...
            "state" : "translated",
            "value" : "Kelime ara"
          }
        }
      }
    },
    "See Results" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ergebnisse ansehen"
          }
...
